--- a/public/css/formulario.css
+++ b/public/css/formulario.css
@@ -1,183 +1,1 @@
-/* CSS */
-.container {
-    max-width: 700px;
-    margin: auto;
-    font-family: 'Open Sans', sans-serif;
-    /* background-color: #f9f9f9; /* Asumiendo que quieras un fondo para todo el contenedor */
-    /* padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1); */
-    */
-}
-
-.input-group.head {
-    margin-left: 0px;
-    margin-right: 5px;
-}
-
-.group-header {
-    display: flex;
-    justify-content: flex-end;
-    /* Espacio entre Fecha y Folio */
-    margin-bottom: 20px;
-    /* Espacio antes del siguiente grupo de campos */
-}
-
-.date-folio-group {
-    width: 40%;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.input-group {
-    margin-right: 20px;
-    /* Espacio entre los campos de Fecha y Folio */
-}
-
-
-.form-header {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.form-logo {
-    width: 200px;
-    /* Ajusta este valor según el tamaño deseado para tu logo */
-    height: auto;
-    /* Mantiene la proporción del logo */
-}
-
-h2 {
-    flex-grow: 1;
-    text-align: center;
-}
-
-form {
-    margin-top: 5px;
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-label {
-    display: block;
-    margin-top: 20px;
-    color: #666;
-}
-
-input,
-select,
-textarea {
-    width: 100%;
-    padding: 10px;
-    margin-top: 5px;
-    border-radius: 5px;
-    border: 1px solid #ddd;
-    box-sizing: border-box;
-    /* Asegura que padding no aumente el tamaño */
-}
-
-.input-group {
-    margin-left: 20px;
-    /* Espaciado entre inputs */
-}
-
-.group {
-    margin-left: 0px;
-    margin-right: 0px;
-}
-
-button[type="submit"] {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    background-color: #03ee2e;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 20px;
-}
-
-button[type="submit"]:hover {
-    background-color: #004494;
-}
-
-#itemsContainer {
-    display: grid;
-    gap: 20px;
-    margin-top: 20px;
-}
-
-/* Estilo por defecto para una partida */
-#itemsContainer.items-1 {
-    grid-template-columns: 1fr;
-}
-
-/* Estilo para dos partidas */
-#itemsContainer.items-2 {
-    grid-template-columns: repeat(2, 1fr);
-}
-
-input#requestDate {
-    background: transparent;
-    border: 0px;
-    padding: 0;
-    width: 80px;
-}
-
-input#requestFolio {
-    background: transparent;
-    border: none;
-    padding: 0;
-    width: 70px;
-}
-
-/* Estilo para tres partidas */
-#itemsContainer.items-3>div:nth-child(-n+2) {
-    grid-column: span 6;
-    /* Asumiendo que quieras 12 columnas en total */
-}
-
-#itemsContainer.items-3>div:nth-last-child(1) {
-    grid-column: span 12;
-}
-
-#itemsContainer.items-4 {
-    grid-template-columns: repeat(2, 1fr);
-}
-
-#itemsContainer.items-5>div:nth-child(-n+5) {
-    grid-column: span 6;
-    /* Asumiendo que quieras 12 columnas en total */
-}
-
-#itemsContainer.items-5>div:nth-last-child(1) {
-    grid-column: span 12;
-}
-
-/* Continúa con este patrón para más partidas si es necesario */
-/* Puedes ajustar el span según el diseño que prefieras */
-
-/* Estilo para las secciones de partidas */
-.item-section {
-    background-color: #fff;
-    padding: 15px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.input-row {
-    display: flex;
-    justify-content: flex-end;
-    /* Alinea a la derecha */
-    margin-bottom: 20px;
-    /* Espaciado entre filas */
-}
-
-.three-fields {
-    justify-content: space-between;
-    /* Espacio entre los campos */
-}
+.container {max-width: 700px;margin: auto;font-family: 'Open Sans', sans-serif;}.input-group.head {margin-left: 0px;margin-right: 5px;}.group-header {display: flex;justify-content: flex-end;margin-bottom: 20px;}.date-folio-group {width: 40%;display: flex;justify-content: flex-end;}.input-group {margin-right: 20px;}.form-header {display: flex;justify-content: flex-start;align-items: center;}.form-logo {width: 200px;height: auto;}h2 {flex-grow: 1;text-align: center;}form {margin-top: 5px;background-color: #f9f9f9;padding: 20px;border-radius: 8px;box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);}label {display: block;margin-top: 20px;color: #666;}input,select,textarea {width: 100%;padding: 10px;margin-top: 5px;border-radius: 5px;border: 1px solid #ddd;box-sizing: border-box;}.input-group {margin-left: 20px;}.group {margin-left: 0px;margin-right: 0px;}button[type="submit"] {display: block;width: 100%;padding: 10px;background-color: #03ee2e;color: white;border: none;border-radius: 5px;cursor: pointer;margin-top: 20px;}button[type="submit"]:hover {background-color: #004494;}#itemsContainer {display: grid;gap: 20px;margin-top: 20px;}#itemsContainer.items-1 {grid-template-columns: 1fr;}#itemsContainer.items-2 {grid-template-columns: repeat(2, 1fr);}input#requestDate {background: transparent;border: 0px;padding: 0;width: 80px;}input#requestFolio {background: transparent;border: none;padding: 0;width: 70px;}#itemsContainer.items-3>div:nth-child(-n+2) {grid-column: span 6;}#itemsContainer.items-3>div:nth-last-child(1) {grid-column: span 12;}#itemsContainer.items-4 {grid-template-columns: repeat(2, 1fr);}#itemsContainer.items-5>div:nth-child(-n+5) {grid-column: span 6;}#itemsContainer.items-5>div:nth-last-child(1) {grid-column: span 12;}.item-section {background-color: #fff;padding: 15px;border-radius: 8px;box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);}.input-row {display: flex;justify-content: flex-end;margin-bottom: 20px;}.three-fields {justify-content: space-between;}
