--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,221 +1,1 @@
-body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #182857;
-    margin: 0;
-    padding: 20px;
-  }
-
-  h1 {
-    color: #ffffff;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  .filter-group {
-    background-color: #fff;
-    padding: 15px;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-  .filter-group > div {
-    margin-bottom: 5px;
-  }
-  label {
-    font-weight: bold;
-    margin-right: 10px;
-  }
-  input[type="text"], input[type="date"], select {
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    font-size: 16px;
-  }
-  select.custom-select {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    padding-right: 30px;
-    background: url('https://cdn-icons-png.flaticon.com/512/60/60995.png') no-repeat right 10px center;
-    background-size: 20px;
-    cursor: pointer;
-  }
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    background-color: #fff;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  }
-  th, td {
-    padding: 10px;
-    text-align: left;
-    border-bottom: 1px solid white;
-  }
-  th {
-    background-color: #182857;
-    color: #ffffff;
-  }
-  tr:nth-child(even) {
-    background-color: #f9f9f9;
-  }
-  #totalsRow {
-    font-weight: bold;
-    background-color: #182857; /* Color de fondo para distinguir la fila de totales */
-    color: #ffffff;
-    border-bottom: 1px solid white;
-    border: 0px;
-  }td#Blank {
-  background-color: #182857;
-  border: 0px;
-}
-  #totalResults {
-    font-size: 18px;
-    font-weight: bold;
-    color: #ffffff;
-    border-bottom: 1px solid white;
-    margin-top: 10px;
-  }
-  /* Estilos adicionales para hacer responsive el grupo de filtros */
-  @media (max-width: 768px) {
-    .filter-group {
-      flex-direction: column;
-    }
-    .filter-group > div {
-      width: 100%;
-      margin-bottom: 10px;
-    }
-  }
-  .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 20px;
-  }
-
-  .header-logo {
-    flex: 0 0 auto; /* No permitir que el logo crezca o se encoja */
-    margin-right: 15px; /* Ajustar según sea necesario */
-    width: 5%;
-  }
-
-  .header-title {
-    flex-grow: 1;
-    color: #ffffff;
-    margin: 0; /* Eliminar el margen por defecto del h1 */
-  }
-  .button {
-    --main-focus: #2d8cf0;
-    --font-color: #ffffff;
-    --bg-color-sub: #222;
-    --bg-color: #F2441D;
-    --main-color: #dedede;
-    position: absolute;
-    width: 150px;
-    transform: translate(-11px, -23px);
-    height: 40px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    border: 2px solid var(--main-color);
-    background-color: var(--bg-color);
-    border-radius: 10px;
-    overflow: hidden;
-  }
-  
-  .button, .button__icon, .button__text {
-    transition: all 0.3s;
-  }
-  
-  .button .button__text {
-    transform: translateX(21px);
-    color: var(--font-color);
-    font-weight: 600;
-  }
-  
-  .button .button__icon {
-    position: absolute;
-    transform: translateX(104px);
-    height: 100%;
-    width: 36px;
-    background-color:#e12f08;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .button .svg {    
-    width: 20px;
-    fill: #ffffff;
-  }
-  
-  .button:hover {
-    background: var(--bg-color);
-  }
-  
-  .button:hover .button__text {
-    color: transparent;
-  }
-  
-  .button:hover .button__icon {
-    width: 140px;
-    transform: translateX(0);
-  }
-  
-  .button:active {
-    box-shadow: 0px 0px var(--main-color);
-  }
-  .cssbuttons-io-button {
-    background: #F2441D;
-    color: white;
-    font-family: inherit;
-    padding-left: 1.2em;
-    font-weight: 500;
-    border-radius: 0.9em;
-    border: none;
-    letter-spacing: 0.05em;
-    display: flex;
-    align-items: center;
-    box-shadow: inset 0 0 1.6em -0.6em #91301a;
-    overflow: hidden;
-    position: relative;
-    height: 2.7em;
-    padding-right: 3.3em;
-    cursor: pointer;
-    text-decoration: none;
-  }
-  
-  .cssbuttons-io-button .icon {
-    background: white;
-    margin-left: 1em;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 2.2em;
-    width: 2.2em;
-    border-radius: 0.7em;
-    box-shadow: 0.1em 0.1em 0.6em 0.2em #91301a;
-    right: 0.3em;
-    transition: all 0.3s;
-  }
-  
-  .cssbuttons-io-button:hover .icon {
-    width: calc(100% - 0.6em);
-  }
-  
-  .cssbuttons-io-button .icon svg {
-    width: 1.1em;
-    transition: transform 0.3s;
-    color: #F2441D;
-  }
-  
-  .cssbuttons-io-button:hover .icon svg {
-    transform: translateX(0.1em);
-  }
-  
-  .cssbuttons-io-button:active .icon {
-    transform: scale(0.95);
-  }
-  
+body {font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;background-color: #182857;margin: 0;padding: 20px;}h1 {color: #ffffff;text-align: center;margin-bottom: 20px;}.filter-group {background-color: #fff;padding: 15px;border-radius: 5px;box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);margin-bottom: 20px;display: flex;justify-content: space-between;flex-wrap: wrap;}.filter-group > div {margin-bottom: 5px;}label {font-weight: bold;margin-right: 10px;}input[type="text"], input[type="date"], select {padding: 10px;border: 1px solid #ddd;border-radius: 4px;font-size: 16px;}select.custom-select {-webkit-appearance: none;-moz-appearance: none;appearance: none;padding-right: 30px;background: url('https://cdn-icons-png.flaticon.com/512/60/60995.png') no-repeat right 10px center;background-size: 20px;cursor: pointer;}table {width: 100%;border-collapse: collapse;background-color: #fff;box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);}th, td {padding: 10px;text-align: left;border-bottom: 1px solid white;}th {background-color: #182857;color: #ffffff;}tr:nth-child(even) {background-color: #f9f9f9;}#totalsRow {font-weight: bold;background-color: #182857;/* Color de fondo para distinguir la fila de totales */color: #ffffff;border-bottom: 1px solid white;border: 0px;}td#Blank {background-color: #182857;border: 0px;}#totalResults {font-size: 18px;font-weight: bold;color: #ffffff;border-bottom: 1px solid white;margin-top: 10px;}/* Estilos adicionales para hacer responsive el grupo de filtros */@media (max-width: 768px) {.filter-group {flex-direction: column;}.filter-group > div {width: 100%;margin-bottom: 10px;}}.header {display: flex;align-items: center;justify-content: space-between;margin-bottom: 20px;}.header-logo {flex: 0 0 auto;/* No permitir que el logo crezca o se encoja */margin-right: 15px;/* Ajustar según sea necesario */width: 5%;}.header-title {flex-grow: 1;color: #ffffff;margin: 0;/* Eliminar el margen por defecto del h1 */}.button {--main-focus: #2d8cf0;--font-color: #ffffff;--bg-color-sub: #222;--bg-color: #F2441D;--main-color: #dedede;position: absolute;width: 150px;transform: translate(-11px, -23px);height: 40px;cursor: pointer;display: flex;align-items: center;border: 2px solid var(--main-color);background-color: var(--bg-color);border-radius: 10px;overflow: hidden;}.button, .button__icon, .button__text {transition: all 0.3s;}.button .button__text {transform: translateX(21px);color: var(--font-color);font-weight: 600;}.button .button__icon {position: absolute;transform: translateX(104px);height: 100%;width: 36px;background-color:#e12f08;display: flex;align-items: center;justify-content: center;}.button .svg {width: 20px;fill: #ffffff;}.button:hover {background: var(--bg-color);}.button:hover .button__text {color: transparent;}.button:hover .button__icon {width: 140px;transform: translateX(0);}.button:active {box-shadow: 0px 0px var(--main-color);}.cssbuttons-io-button {background: #F2441D;color: white;font-family: inherit;padding-left: 1.2em;font-weight: 500;border-radius: 0.9em;border: none;letter-spacing: 0.05em;display: flex;align-items: center;box-shadow: inset 0 0 1.6em -0.6em #91301a;overflow: hidden;position: relative;height: 2.7em;padding-right: 3.3em;cursor: pointer;text-decoration: none;}.cssbuttons-io-button .icon {background: white;margin-left: 1em;position: absolute;display: flex;align-items: center;justify-content: center;height: 2.2em;width: 2.2em;border-radius: 0.7em;box-shadow: 0.1em 0.1em 0.6em 0.2em #91301a;right: 0.3em;transition: all 0.3s;}.cssbuttons-io-button:hover .icon {width: calc(100% - 0.6em);}.cssbuttons-io-button .icon svg {width: 1.1em;transition: transform 0.3s;color: #F2441D;}.cssbuttons-io-button:hover .icon svg {transform: translateX(0.1em);}.cssbuttons-io-button:active .icon {transform: scale(0.95);}
